--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -68,7 +68,7 @@
             <td>  <a title="订单明细" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$info.order_id}</span> 订单明细','{:url(\'index/Order/orderDetail\',[\'id\'=>$info.id])}')", href="javascript:;"> {$info.order_id} </a></td>
             <td>{$info.order_content}</td>
             <td>{$info.delivery_time}</td>
-            <td>{$info.client_id}</td>
+            <td>{$info.client_id|getClientAbbreviation}</td>
             <td>{$info.prepare}</td>
             <td>{$info.order_price}</td>
             <td>
