--- a/application/index/view/order/order_detail_add.html
+++ b/application/index/view/order/order_detail_add.html
@@ -48,11 +48,18 @@
           </div>
         </div>
         <div class="layui-inline">
-          <label class="layui-form-label">订单数量</label>
+          <label class="layui-form-label">计划数量</label>
           <div class="layui-input-inline" style="width: 100px;">
-            <input type="text" autocomplete="off" name="order_qty[]" class="layui-input">
+            <input type="text" value="0"  name="plan_qty[]" autocomplete="off" class="layui-input">
           </div>
         </div>
+        <!--<div class="layui-inline">-->
+          <!--<label class="layui-form-label">订单数量</label>-->
+          <!--<div class="layui-input-inline" style="width: 100px;">-->
+            <!--<input type="text" autocomplete="off" name="order_qty[]" class="layui-input">-->
+          <!--</div>-->
+        <!--</div>-->
+
         <div class="layui-inline">
           <label class="layui-form-label">加工安排</label>
           <div class="layui-input-inline" style="width: 100px;">
@@ -79,12 +86,7 @@
           </div>
         </div>
 
-        <div class="layui-inline">
-          <label class="layui-form-label">计划数量</label>
-          <div class="layui-input-inline" style="width: 100px;">
-            <input type="text"  name="plan_qty[]" autocomplete="off" class="layui-input">
-          </div>
-        </div>
+
 
         <div class="layui-inline">
           <label class="layui-form-label">交货日期</label>
