设备和量具

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -235,11 +235,25 @@
                 </ul>
             </li>
             <li>
-                <a _href="datum.html">
+                <a href="javascript:;">
                     <i class="icon iconfont">&#xe705;</i>
-                    <cite>设备管理</cite>
+                    <cite>设备和量具</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="{:url('index/Equipment/equipmentInfo')}" >
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>设备管理</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="{:url('index/Measuring/measuringInfo')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>量具管理</cite>
+                        </a>
+                    </li >
+                </ul>
             </li>
             <li>
                 <a  href="javascript:;">
@@ -255,7 +269,6 @@
                         </a>
                     </li >
                 </ul>
-
             </li>
             {/if}
             <li>
