设备和量具-修复

--- a/application/index/view/equipment/equipment-info.html
+++ b/application/index/view/equipment/equipment-info.html
@@ -22,7 +22,7 @@
                 <div class="layui-input-inline">
                     <select name="id" lay-search="" >
                         <option value=""></option>
-                        <optgroup label="设备编号">
+                        <optgroup label="设备类型">
                             {volist name="$equipmentType" id="equipmentTypeList"}
                             <option value="{$equipmentTypeList.id}">{$equipmentTypeList.eqpmt_type}</option>
                             {/volist}
