--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -313,7 +313,7 @@
         <div >
             <label class="layui-form-label">继承图纸文件</label>
             <div class="layui-input-inline">
-                <input type="checkbox" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
+                <input type="checkbox" checked="true" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
             </div>
         </div>  <!-- 是否继承外图图纸文件 默认选中为是-->
         <div class="layui-form-item layui-form-text">
