设备添加保养和维修，量具增删字段

--- a/application/index/view/measuring/edit-measuring-info.html
+++ b/application/index/view/measuring/edit-measuring-info.html
@@ -50,15 +50,9 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">检验日期</label>
+            <label class="layui-form-label">购买价格</label>
             <div class="layui-input-inline">
-                <input type="text" class="layui-input" name="inspection_date" value="{$measuringInfoList.inspection_date}">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">检测计划</label>
-            <div class="layui-input-inline">
-                <input type="text" class="layui-input" name="inspection_scheme" value="{$measuringInfoList.inspection_scheme}">
+                <input type="text" class="layui-input" name="price" value="{$measuringInfoList.price}">
             </div>
         </div>
         <div class="layui-form-item">
