--- a/application/index/view/measuring/add-measuring-info.html
+++ b/application/index/view/measuring/add-measuring-info.html
@@ -48,15 +48,9 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">检验日期</label>
+            <label class="layui-form-label">购买价格</label>
             <div class="layui-input-inline">
-                <input type="text" class="layui-input" name="inspection_date">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">检测计划</label>
-            <div class="layui-input-inline">
-                <input type="text" class="layui-input" name="inspection_scheme">
+                <input type="text" class="layui-input" name="price">
             </div>
         </div>
         <div class="layui-form-item">
