--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -140,6 +140,12 @@
                         </a>
                     </li >
                     <li>
+                        <a _href="{:url('index/Equipment/equipmentType')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>设备类型</cite>
+                        </a>
+                    </li >
+                    <li>
                         <a href="javascript:;">
                             <i class="layui-icon layui-icon-rmb"></i>
                             <cite>财务相关</cite>
