--- a/application/index/view/measuring/edit-measuring-info.html
+++ b/application/index/view/measuring/edit-measuring-info.html
@@ -17,8 +17,8 @@
                     <select name="measuring_name" lay-verify="required" lay-search="">
                         <option value="{$measuringInfoList.measuring_name}">{$measuringInfoList.measuring_name|getMeasuringName}</option>
                         <optgroup label="选择名称">
-                            {volist name="$measuringType" id="measuringTypeList"}
-                            <option value="{$measuringTypeList.id}">{$measuringTypeList.measuring_type}</option>
+                            {volist name="$measuringType" id = "measuringTypeList"}
+                            <option value="{$measuringTypeList.id}">{$measuringTypeList.cost_name}</option>
                             {/volist}
                         </optgroup>
                     </select>
