--- a/application/index/view/measuring/measuring-info.html
+++ b/application/index/view/measuring/measuring-info.html
@@ -23,8 +23,8 @@
                     <select name="id" lay-search="" >
                         <option value=""></option>
                         <optgroup label="选择名称">
-                            {volist name="$measuringType" id="measuringTypeList"}
-                            <option value="{$measuringTypeList.id}">{$measuringTypeList.measuring_type}</option>
+                            {volist name="$measuringType" id = "measuringTypeList"}
+                            <option value="{$measuringTypeList.pid}">{$measuringTypeList.cost_name}</option>
                             {/volist}
                         </optgroup>
                     </select>
